--- a/searchmovie.html
+++ b/searchmovie.html
@@ -10,6 +10,27 @@
 </head>
 <body>
     <div class="container">
+        <nav class="navbar navbar-expand-lg bg-primary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">movie app</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">add movie</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="searchmovie.html">search movie</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="delete.html">delete movie</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
         <div class="row div col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
             <div class="row g-3">
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
